changes in admin-input

--- a/src/app/createPage/password.component.html
+++ b/src/app/createPage/password.component.html
@@ -21,7 +21,7 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-    <div class="col-md-6 col-sm-6 col-xs-12 dtl_row">
+    <div style="width:100%"  e>
         <label class="lbl_hdr">Password</label>
         <div class="input-group">
             <input [id]="id" [value]="value" class="cmn_input password" [placeholder]="pholder" type="password">
