--- a/src/app/createPage/selectOption.component.html
+++ b/src/app/createPage/selectOption.component.html
@@ -25,14 +25,21 @@
         </span>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12 dtl_row">
-        <label class="lbl_hdr">Password</label>
-        <div class="input-group">
-            <input [id]="id" class="cmn_input password" [value]="value" [placeholder]="pholder" type="password">
-            <span class="input-group-addon custom_icn">
-                <span class="fa fa-lock"></span>
-            </span>
+           
+                <div class="col-md-2 col-sm-2 col-xs-2 custom_chk_bx admi_chk ">
+                    <input type="checkbox" id="chk6" name="" value="" class="chk_bx">
+                    <label for="chk6"></label>
+                </div>
+                <div class="col-md-10 col-sm-10 col-xs-10 selectdiv">
+                    <label>
+                        <select class="cmn_input">
+                            <option value="Gujarat">selectable optionbox</option>
+                            <option value="Maharashtra">abc</option>
+                            <option value="Bengal">xyz</option>
+                        </select>
+                    </label>
+            </div>
         </div>
-    </div>
 </div>
 
 
@@ -60,14 +67,22 @@
         </span>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12 dtl_row">
-        <label class="lbl_hdr">Password</label>
-        <div class="input-group">
-            <input class="cmn_input password" placeholder="Password" type="password">
-            <span class="input-group-addon custom_icn">
-                <span class="fa fa-lock"></span>
-            </span>
+          
+                <div class="col-md-2 col-sm-2 col-xs-2 custom_chk_bx admi_chk ">
+                    <input type="checkbox" id="chk6" name="" value="" class="chk_bx">
+                    <label for="chk6"></label>
+                </div>
+                <div class="col-md-10 col-sm-10 col-xs-10 selectdiv">
+                    <label>
+                        <select class="cmn_input">
+                            <option value="Gujarat">selectable optionbox</option>
+                            <option value="Maharashtra">abc</option>
+                            <option value="Bengal">xyz</option>
+                        </select>
+                    </label>
+               
+            </div>
         </div>
-    </div>
 </div>
 </div>
 </div>
