--- a/src/app/admin/listContent/gridlist.scss
+++ b/src/app/admin/listContent/gridlist.scss
@@ -1,3 +1,10 @@
 @import '~@swimlane/ngx-datatable/release/index.css';
 @import '~@swimlane/ngx-datatable/release/themes/material.css';
 @import '~@swimlane/ngx-datatable/release/assets/icons.css';
+
+.pnl_inp
+{
+    border: 0;
+    background: transparent !important;
+    text-overflow: ellipsis !important;
+}
