--- a/src/app/createPage/checkbox.component.html
+++ b/src/app/createPage/checkbox.component.html
@@ -32,7 +32,7 @@
 
 <div *ngFor="let tb of Textboxes">
     <div *ngIf="showTextBox && tb!==undefined">
-    <div class="col-md-6 col-sm-6 element_box">
+    <div [class]="css">
         <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(tb.idx)">
@@ -55,8 +55,8 @@
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12 custom_chk_bx dtl_row">
         <div class="chk_bx chk_top">
-            <input type="checkbox" id="chkid1" name="" value="">
-            <label for="chkid1">check box1</label>
+            <input type="checkbox" [id]="id" name="" [value]="tb.value">
+            <label [for]="id">check box1</label>
         </div>
     </div>
 </div>
