--- a/src/app/createPage/createPage1.component.html
+++ b/src/app/createPage/createPage1.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bgwhite">
         <div class="row page_header">
             <div class="col-lg-12 add_control_btn">
-              <button type="button" class="btn"  id="add_btn" data-toggle="modal" data-target="#control_Modal"><span class="fa fa-plus"></span><label> Add</label></button>
+              <button type="button" class="btn mtb35"  id="add_btn" data-toggle="modal" data-target="#control_Modal"><span class="fa fa-plus"></span><label> Add</label></button>
             </div>
             <!-- Modal -->
             <div class="modal fade control_mdl" id="control_Modal" role="dialog">
@@ -296,6 +296,10 @@
                     </div>
                 </div>
         </div>
+        <div class="clearfix"></div>
+        <div class="clearfix"></div>
+        <div class="clearfix"></div>
+        <div class="clearfix"></div>
     <div id="displayControls">
         <!-- <input ngui-datetime-picker date-format='DD-MM-YYYY HH:MM' year='2014' month='12' day='31' hour='23' minute='59' class='form-control' id='starttime'    placeholder='Start Date'  [min-date]='minDate'   [close-on-select]='false'/> -->
         <!-- <div class="col-md-6 col-sm-6 col-xs-12 dtl_row klvrn_dt_picker">
@@ -310,6 +314,7 @@
             <!-- <div *ngIf="isTimePick">
              <ng-container *ngComponentOutlet="alert"></ng-container>
             </div> -->
+           
             <div *ngFor="let component of components;let i=index">
                 <ng-container *ngComponentOutlet="component;
                 ndcDynamicInputs: inputs[i];
