--- a/src/app/createPage/datepicker.component.html
+++ b/src/app/createPage/datepicker.component.html
@@ -35,7 +35,7 @@
       
       <div *ngFor="let tb of Textboxes">
           <div *ngIf="showTextBox && tb!==undefined">
-          <div class="col-md-6 col-sm-6 element_box">
+          <div [class]="tb.css">
               <div class="action-ui" id="tour-action-ui-id">
               <span class="actions">
                   <a class="" (click)="cloneElement(tb.idx)">
@@ -58,7 +58,7 @@
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 dtl_row klvrn_dt_picker">
                 <label class="lbl_hdr">Select Date: </label>
-                <div id="datetimepicker1" class="input-group date">
+                <div [id]="id" class="input-group date">
                     <input type="text" class="cmn_input" value="05/01/2017">
                     <span class="input-group-addon">
                         <span class="fa fa-calendar"></span>
