--- a/src/app/createPage/search.component.html
+++ b/src/app/createPage/search.component.html
@@ -24,7 +24,7 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-    <div class="col-md-12 dtl_row search_div">
+    <div class="dtl_row search_div">
         <div class="row">
             <div class="col-md-10">
                 <input [id]="id" [value]="value" type='search' class="cmn_input" [placeholder]="pholder" />
@@ -43,7 +43,7 @@
 
 <div *ngFor="let tb of Textboxes">
     <div *ngIf="showTextBox && tb!==undefined">
-    <div class="col-md-6 col-sm-6 element_box">
+    <div [class]="tb.css">
         <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(tb.idx)">
@@ -67,7 +67,7 @@
     <div class="col-md-12 dtl_row search_div">
         <div class="row">
             <div class="col-md-10">
-                <input type='search' class="cmn_input" placeholder="SEARCH RESOURCES - e.g. Java Developer with 3 Years of experience in Pune" />
+                <input type='search' class="cmn_input" [id]="tb.id" [value]="tb.value" [placeholder]="tb.pholder" />
             </div>
             <div class="col-md-2">
                 <button type="button" class="btn srch_btn">
