--- a/src/app/createPage/switch.component.html
+++ b/src/app/createPage/switch.component.html
@@ -24,7 +24,7 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-    <div class="col-md-6 col-sm-6 col-xs-12 dtl_row">
+    <div class="dtl_row">
         
                                 <div class="tgl_switch">
                                     <input type="checkbox" class="tgl" [id]="id"  [checked]="value"/>
@@ -36,7 +36,7 @@
 
 <div *ngFor="let tb of Textboxes">
     <div *ngIf="showTextBox && tb!==undefined">
-    <div class="col-md-6 col-sm-6 element_box">
+    <div [class]="tb.css">
         <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(tb.idx)">
@@ -57,11 +57,11 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-    <div class="col-md-6 col-sm-6 col-xs-12 dtl_row">
+    <div class="dtl_row">
         
                                 <div class="tgl_switch">
-                                    <input type="checkbox" class="tgl" id="lbl_tgl" />
-                                    <label for="lbl_tgl"></label>
+                                    <input type="checkbox" class="tgl" [id]="tb.id" [checked]="tb.value"/>
+                                    <label [for]="tb.id"></label>
                                 </div>
                             </div>
 </div>
