--- a/src/app/createPage/textboxwithlbl.component.html
+++ b/src/app/createPage/textboxwithlbl.component.html
@@ -19,7 +19,7 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-<div class="col-md-6 col-sm-6 col-xs-12 klvrn_col dtl_row">
+<div class="klvrn_col dtl_row">
 <input class="cmn_input" [placeholder]="pholder" [value]="value" [id]="id">
 </div>
 </div>
@@ -27,7 +27,7 @@
 
 <div *ngFor="let tb of Textboxes">
     <div *ngIf="showTextBox && tb!==undefined">
-    <div class="col-md-6 col-sm-6 element_box">
+    <div [class]="tb.css">
         <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(tb.idx)">
@@ -48,8 +48,8 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-<div class="col-md-6 col-sm-6 element_box1">
-<input class="cmn_input" [placeholder]="tb.pholder" [value]="tb.value" [id]="tb.id" #tbox_{{tb.idx}}>
+<div class="element_box1">
+<input class="cmn_input" [placeholder]="tb.pholder" [value]="tb.value" [id]="tb.id">
 </div>
 </div>
 </div>
