--- a/src/app/createPage/timePicker.component.html
+++ b/src/app/createPage/timePicker.component.html
@@ -19,7 +19,7 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-    <div class="col-md-6 col-sm-6 col-xs-12 dtl_row klvrn_dt_picker">
+    <div class="dtl_row klvrn_dt_picker">
         <label class="lbl_hdr">Select Time: </label>
         <div class='input-group date' [id]='id'>
             <input type='text' class="cmn_input" />
@@ -33,7 +33,7 @@
 
 <div *ngFor="let tb of Textboxes">
     <div *ngIf="showTextBox && tb!==undefined">
-    <div class="col-md-6 col-sm-6 element_box">
+    <div [class]="tb.css">
         <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(tb.idx)">
@@ -54,9 +54,9 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-    <div class="col-md-6 col-sm-6 col-xs-12 dtl_row klvrn_dt_picker">
+    <div class="dtl_row klvrn_dt_picker">
         <label class="lbl_hdr">Select Time: </label>
-        <div class='input-group date' id='datetimepicker2'>
+        <div class='input-group date' id='datetimepicker-{{tb.idx}}'>
             <input type='text' class="cmn_input" />
             <span class="input-group-addon">
                 <span class="fa fa-clock-o"></span>
