changes to data-id

--- a/src/app/admin2/admin-input.html
+++ b/src/app/admin2/admin-input.html
@@ -306,7 +306,7 @@
                                                     
                                                     <ng-container *ngIf="tb.type == 'textbox'">
 
-                                                        <div [attr.data.id]="tb.order" class="col-md-6 col-sm-6 col-xs-12 element_box">
+                                                        <div [attr.data-id]="tb.order" class="col-md-6 col-sm-6 col-xs-12 element_box">
                                                             <div class="action-ui" id="tour-action-ui-id">
                                                                 <span class="actions">
                                                                     <a class="clone" (click)="cloneElement(tb.order)">
