--- a/src/assets/styles/controls.css
+++ b/src/assets/styles/controls.css
@@ -1,9 +1,11 @@
-
-﻿.custom_title 
+﻿.wdt_label 
 {
-   background-color:#0b8fcf;
-   height:65px;
-  
+    padding-top:39px;
+}
+
+.custom_title {
+    background-color: #0b8fcf;
+    height: 65px;
 }
 .custom_title h4{
    font-size:20px;
@@ -77,10 +79,14 @@ label.lbl_hdr {
     transition: all 0.2s ease 0s;
 }
 
-.custom_chk_bx {
-    padding: 50px 0;
+.custom_chk_bx.wdt_label {
+    padding-top: 54px;
+    padding-bottom: 44px;
 }
-
+.custom_chk_bx {
+    padding-top: 15px;
+    padding-bottom: 55px;
+}
     .custom_chk_bx.admi_chk [type="checkbox"]:not(:checked) + label::after, .custom_chk_bx.admi_chk [type="checkbox"]:checked + label::after {
         left: 28px;
     }
@@ -89,6 +95,8 @@ label.lbl_hdr {
         margin-left: 0px;
     }
 /****** radio button *******/
+
+
 .custom_radio {
     padding-right: 30px;
 }
@@ -108,7 +116,7 @@ label.lbl_hdr {
             color: #333;
             font-size: 16px;
             font-weight: 500;
-            padding-top:3px;
+            padding-top:0px;
         }
 
             .custom_radio [type="radio"]:checked + label:before,
@@ -161,6 +169,7 @@ label.lbl_hdr {
 /****** switch *******/
 .tgl_switch {
     text-align: left;
+    position:absolute;
 }
 
     .tgl_switch input.tgl[type="checkbox"] {
@@ -313,6 +322,19 @@ label.lbl_hdr {
     padding-top: 10px;
     font-weight:500;
 }
+
+/* range slider */
+.rb_hdr {
+   
+    width:150px;
+     padding-right:0;
+}
+.rate_bdgt .lbl_hdr {
+    padding-bottom: 0px;
+}
+
+/* end range slider */
+
 
 @media screen and (max-width: 767px) {
     .custom_chk_bx {
