--- a/src/app/admin2/admin-input.html
+++ b/src/app/admin2/admin-input.html
@@ -1,6 +1,6 @@
 
 
-<link rel="stylesheet" [href]="changeC | safe">
+<!-- <link rel="stylesheet" [href]="changeC | safe"> -->
 
 <div class="own_cntrl_list" id="own_contrl_list">
     
