--- a/src/app/admin2/admin-input.html
+++ b/src/app/admin2/admin-input.html
@@ -1,6 +1,6 @@
 
 
-<!-- <link rel="stylesheet" [href]="changeC | safe"> -->
+<link rel="stylesheet" [href]="changeC | safe">
 
 <div class="own_cntrl_list" id="own_contrl_list">
     
@@ -50,10 +50,10 @@
         <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 add_own_cntrl">
             <span class="add_col_btn">
                 <button class="btn btn1">
-                    <span class="col_icon"><img src="/assets/images/col-1.png" alt="" (click)="addStyleSheet('cols-1')"/></span>
-                    <span class="col_icon"><img src="/assets/images/col-2.png" alt="" (click)="addStyleSheet('cols-2')"/></span>
-                    <span class="col_icon"><img src="/assets/images/col-3.png" alt="" (click)="addStyleSheet('cols-3')"/></span>
-                    <span class="col_icon"><img src="/assets/images/col-4.png" alt="" (click)="addStyleSheet('cols-4')"/></span>
+                    <span class="col_icon"><img src="./assets/images/col-1.png" alt="" (click)="addStyleSheet('cols-1')"/></span>
+                    <span class="col_icon"><img src="./assets/images/col-2.png" alt="" (click)="addStyleSheet('cols-2')"/></span>
+                    <span class="col_icon"><img src="./assets/images/col-3.png" alt="" (click)="addStyleSheet('cols-3')"/></span>
+                    <span class="col_icon"><img src="./assets/images/col-4.png" alt="" (click)="addStyleSheet('cols-4')"/></span>
                     <span class="col_text">Customize Colum</span>
                 </button>
             </span>
