--- a/src/app/parent.html
+++ b/src/app/parent.html
@@ -15,8 +15,8 @@
                     
                 <li><a>
                     <h3>
-                        <label>
-                            {{'Main' | translate:param}}
+                        <label translate>
+                           Main
                         </label>
                     </h3>
                     </a>
@@ -25,8 +25,8 @@
                     <a [routerLink]="['../parent/adminWidget']">
                         <img src="./assets/images/settings/Dashboard.png" class="icon-img" />
                         <span>
-                            <label>
-                                {{'Dashboard' | translate:param}}
+                            <label translate>
+                                Dashboard
                             </label>
                         </span>
                     </a>
@@ -36,8 +36,8 @@
                     <a class="sub_menu_toggle" href="javascript::void(0)">
                         <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
                         <span>
-                            <label>
-                                {{'Admin' | translate:param}}
+                            <label translate>
+                                Admin
                             </label>
                         </span>
                     </a>
@@ -57,8 +57,8 @@
                     <a href="javascript::void(0)">
                         <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
                         <span>
-                            <label>
-                                {{'My Team' | translate:param}}
+                            <label translate>
+                                My Team
                             </label>
                         </span>
                     </a>
@@ -68,8 +68,8 @@
                     <a class="sub_menu_toggle" href="javascript::void(0)">
                         <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
                         <span>
-                            <label>
-                               {{'Job Postings' | translate:param}}
+                            <label translate>
+                               Job Postings
                             </label>
                         </span>
                     </a>
@@ -85,8 +85,8 @@
                     <a href="javascript::void(0)">
                         <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
                         <span>
-                            <label>
-                                {{'Projects' | translate:param}}
+                            <label translate>
+                                Projects
                             </label>
                         </span>
                     </a>
@@ -95,8 +95,8 @@
                     <a href="javascript::void(0)">
                         <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
                         <span>
-                            <label>
-                                {{'Positions' | translate:param}}
+                            <label translate>
+                                Positions
                             </label>
                         </span>
                     </a>
@@ -105,19 +105,8 @@
                     <a href="javascript::void(0)">
                         <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
                         <span>
-                            <label>
-                                {{'Time & Expense' | translate:param}}
-                            </label>
-                        </span>
-                    </a>
-
-                </li>
-                <li>
-                    <a href="javascript::void(0)">
-                        <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
-                        <span>
-                            <label>
-                                {{'Documents' | translate:param}}
+                            <label translate>
+                                Time & Expense
                             </label>
                         </span>
                     </a>
@@ -127,8 +116,19 @@
                     <a href="javascript::void(0)">
                         <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
                         <span>
-                            <label>
-                                {{'Settings' | translate:param}}
+                            <label translate>
+                                Documents
+                            </label>
+                        </span>
+                    </a>
+
+                </li>
+                <li>
+                    <a href="javascript::void(0)">
+                        <img src="./assets/images/settings/Job-postings.png" class="icon-img" />
+                        <span>
+                            <label translate>
+                                Settings
                             </label>
                         </span>
                     </a>
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="col-xs-4 text_center mob_head">
-                <h1><label>Kleveron</label></h1>
+                <h1><label>{{template_name}}</label></h1>
             </div>
             <div class="col-sm-4">
                 <div class="header-rightside">
@@ -158,7 +158,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="./assets/images/settings/user.png" alt="" class="user-icon">
-                                <span><label translate>John Smith</label></span>
+                                <span><label>{{username}}</label></span>
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu animated fadeInUpShort">
@@ -176,13 +176,13 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right animated fadeInUpShort">
                                 <li>
-                                    <a (click)="changeLang('en')" class="view btn-sm"><label translate>English</label></a>
+                                    <a (click)="changeLang('en')" class="view btn-sm"><label>English</label></a>
                                 </li>
                                 <li>
-                                    <a (click)="changeLang('hindi')" class="view btn-sm"><label translate>Hindi</label></a>
+                                    <a (click)="changeLang('hindi')" class="view btn-sm"><label>हिंदी</label></a>
                                 </li>
                                 <li>
-                                        <a (click)="changeLang('guj')" class="view btn-sm"><label translate>Gujarati</label></a>
+                                        <a (click)="changeLang('guj')" class="view btn-sm"><label>ગુજરાતી</label></a>
                                     </li>
                             </ul>
                         </li>
