--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -14,7 +14,7 @@
         <div class="right_sec right">
             <div class="container-fluid">
                 <div class="logo">
-                    <a href="#"><img src="kleveronv1.0/assets/images/logo.png" alt="" /></a>
+                    <a href="#"><img src="./assets/images/logo.png" alt="" /></a>
                 </div>
                 <div class="welcome_txt">
                     <h2>
@@ -44,7 +44,7 @@
                             
                                 <label>
                                     <span translate>Sign In</span><span class="sign_in_img">
-                                        <img src="/assets/images/login/sign-in-img.png" />
+                                        <img src="./assets/images/login/sign-in-img.png" />
                                     </span>
                                 </label>
                             </button>
