--- a/src/app/admin2/admin-input.html
+++ b/src/app/admin2/admin-input.html
@@ -62,7 +62,7 @@
                 <button type="button" class="btn btn2" (click)="SelectControlNav()" id="add_new_control"><span class="fa fa-plus"></span>Add</button>
             </span>
             <span>
-                <img src="/assets/images/on-boarding/onbrd-icon.png" class="icon-img pull-right" />
+                <img src="./assets/images/on-boarding/onbrd-icon.png" class="icon-img pull-right" />
             </span>
             <div class="clearfix"></div>
         </div>
