--- a/src/app/admin/admin-widget-master.component.html
+++ b/src/app/admin/admin-widget-master.component.html
@@ -45,27 +45,27 @@
                                             <div class="action-ui" id="tour-action-ui-id">
                                                 <span class="actions">
                                                     <a href="javascript:void(0);">
-                                                        <span class="edit_icon"><a [(colorPicker)]="color"><img src="/assets/images/color-picker.png" alt="" /></a></span>
+                                                        <span class="edit_icon"><a [(colorPicker)]="color"><img src="./assets/images/color-picker.png" alt="" /></a></span>
                                                     </a>
                                                 </span>
                                                 <span class="actions">
                                                     <a href="javascript:void(0);">
-                                                        <span class="edit_icon"><a (click) = "setRdOnly()"><img src="/assets/images/text.png" alt="" /></a></span>
+                                                        <span class="edit_icon"><a (click) = "setRdOnly()"><img src="./assets/images/text.png" alt="" /></a></span>
                                                     </a>
                                                 </span>
                                                 <span class="actions">
                                                     <a href="javascript:void(0);">
-                                                        <span class="edit_icon"><a (click)="changeSize('dec')"><img src="/assets/images/font-increase.png" alt="" /></a></span>
+                                                        <span class="edit_icon"><a (click)="changeSize('dec')"><img src="./assets/images/font-increase.png" alt="" /></a></span>
                                                     </a>
                                                 </span>
                                                 <span class="actions">
                                                     <a href="javascript:void(0);">
-                                                        <span class="edit_icon"><a (click)="changeSize('inc')"><img src="/assets/images/font-decrease.png" alt="" /></a></span>
+                                                        <span class="edit_icon"><a (click)="changeSize('inc')"><img src="./assets/images/font-decrease.png" alt="" /></a></span>
                                                     </a>
                                                 </span>
                                                 <span class="actions">
                                                     <a href="javascript:void(0);">
-                                                        <span class="edit_icon"><img src="/assets/images/move.png" alt="" /></span>
+                                                        <span class="edit_icon"><img src="./assets/images/move.png" alt="" /></span>
                                                     </a>
                                                 </span>
                                             </div>
