--- a/src/app/admin/listContent/grid.html
+++ b/src/app/admin/listContent/grid.html
@@ -22,7 +22,7 @@
                 [selectionType]="'multi'"
                 (activate)="onActivate($event)"
                 (select)='onSelect($event)'
-                [columns]="_internalColumns"
+                [columns]="columns"
                >
                
              
